--- a/CarHub/Views/Admin/Index.cshtml
+++ b/CarHub/Views/Admin/Index.cshtml
@@ -6,47 +6,46 @@
 
 <!-- Featured car start -->
 <div class="featured-car content-area view-cars-outer-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h3 class="title add-new-link">
-                    <a asp-action="ManageInventory" asp-controller="Admin"><span>Add New</span></a>
-                </h3>
-                <!-- Option bar start -->
-                @if (Model.Count > 0)
-                {
-                    <table id="table_id" class="display">
-                        <thead>
-                            <tr>
-                                <th>Action</th>
-                                <th>Image</th>
-                                <th>Make</th>
-                                <th>Model</th>
-                                <th>Trim</th>
-                                <th>Kms</th>
-                                <th>Transmission Type</th>
-                                <th>Rego Number</th>
-                                <th>Rego Expiry</th>
-                                <th>Color</th>
-                                <th>Body Type</th>
-                                <th>No Of Doors</th>
-                                <th>No Of Seats</th>
-                                <th>No Of Cylinders</th>
-                                <th>Drive Type</th>
-                                <th>Fuel Type</th>
-                                <th>Purchase Date</th>
-                                <th>Purchase Price</th>
-                                <th>Repairs</th>
-                                <th>Repair Cost</th>
-                                <th>Lot Date</th>
-                                <th>Selling Price</th>
-                                <th>Sale Date</th>
-                                <th>Inventory Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
+    <div class="container-fluid">
+        <div class="container-fluid-inner">
+            <h3 class="title add-new-link">
+                <a asp-action="ManageInventory" asp-controller="Admin"><span>Add New</span></a>
+            </h3>
+            <!-- Option bar start -->
+            @if (Model.Count > 0)
+            {
+                <table id="table_id" class="display">
+                    <thead>
+                        <tr>
+                            <th>Action</th>
+                            <th>Image</th>
+                            <th>Make</th>
+                            <th>Model</th>
+                            <th>Trim</th>
+                            <th>Kms</th>
+                            <th>Transmission Type</th>
+                            <th>Rego Number</th>
+                            <th>Rego Expiry</th>
+                            <th>Color</th>
+                            <th>Body Type</th>
+                            <th>No Of Doors</th>
+                            <th>No Of Seats</th>
+                            <th>No Of Cylinders</th>
+                            <th>Drive Type</th>
+                            <th>Fuel Type</th>
+                            <th>Purchase Date</th>
+                            <th>Purchase Price</th>
+                            <th>Repairs</th>
+                            <th>Repair Cost</th>
+                            <th>Lot Date</th>
+                            <th>Selling Price</th>
+                            <th>Sale Date</th>
+                            <th>Inventory Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
                             <tr>
                                 <td>
                                     <form>
@@ -87,23 +86,22 @@
                                 <td>@item.SaleDate</td>
                                 <td>@item.InventoryStatusName</td>
                             </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
-                else
-                {
-                    <div class="option-bar clearfix">
-                        <div class="row">
-                            <div class="col-lg-5 col-md-6 col-sm-12">
-                                <div class="sorting-options2">
-                                    <h5>Sorry! There are no items available!</h5>
-                                </div>
+                        }
+                    </tbody>
+                </table>
+            }
+            else
+            {
+                <div class="option-bar clearfix">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-6 col-sm-12">
+                            <div class="sorting-options2">
+                                <h5>Sorry! There are no items available!</h5>
                             </div>
                         </div>
                     </div>
-                }
-            </div>
+                </div>
+            }
         </div>
     </div>
 </div>
