Expanded description to be text area then simple input text box

--- a/CarHub/Views/Admin/ManageInventory.cshtml
+++ b/CarHub/Views/Admin/ManageInventory.cshtml
@@ -220,7 +220,7 @@
                         <div class="col-md-8 text-left">
                             <div class="form-group">
                                 <label asp-for="Description">Description</label>
-                                <input asp-for="Description" type="text" class="form-control search-fields" placeholder="Enter Description">
+                                <textarea rows="5" asp-for="Description" type="text" class="form-control search-fields" placeholder="Enter Description"></textarea>
                             </div>
                         </div>
                         <div class="col-md-8 text-left">
