refactoring and bug fixes

--- a/CarHub/Views/Admin/ManageInventory.cshtml
+++ b/CarHub/Views/Admin/ManageInventory.cshtml
@@ -45,8 +45,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide carmake-other">
                             <div class="form-group">
-                                <label asp-for="CarMakeName">New Make</label>
-                                <input asp-for="CarMakeName" type="text" class="form-control search-fields" placeholder="Enter a new car make">
+                                <label asp-for="NewCarMakeName">New Make</label>
+                                <input asp-for="NewCarMakeName" type="text" class="form-control search-fields" placeholder="Enter a new car make">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -60,8 +60,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide carmodel-other">
                             <div class="form-group">
-                                <label asp-for="CarModelName">New Model</label>
-                                <input asp-for="CarModelName" type="text" class="form-control search-fields" placeholder="Enter a new car model">
+                                <label asp-for="NewCarModelName">New Model</label>
+                                <input asp-for="NewCarModelName" type="text" class="form-control search-fields" placeholder="Enter a new car model">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -75,8 +75,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide trim-other">
                             <div class="form-group">
-                                <label asp-for="TrimName">New Trim</label>
-                                <input asp-for="TrimName" type="text" class="form-control search-fields" placeholder="Enter a new trim">
+                                <label asp-for="NewTrimName">New Trim</label>
+                                <input asp-for="NewTrimName" type="text" class="form-control search-fields" placeholder="Enter a new trim">
                             </div>
                         </div>
                     </div>
@@ -140,8 +140,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide color-other">
                             <div class="form-group">
-                                <label asp-for="ColorName">New Color</label>
-                                <input asp-for="ColorName" type="text" class="form-control search-fields" placeholder="Enter a new color">
+                                <label asp-for="NewColorName">New Color</label>
+                                <input asp-for="NewColorName" type="text" class="form-control search-fields" placeholder="Enter a new color">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -155,8 +155,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide bodytype-other">
                             <div class="form-group">
-                                <label asp-for="BodyTypeName">New Body Type</label>
-                                <input asp-for="BodyTypeName" type="text" class="form-control search-fields" placeholder="Enter a new body type">
+                                <label asp-for="NewBodyTypeName">New Body Type</label>
+                                <input asp-for="NewBodyTypeName" type="text" class="form-control search-fields" placeholder="Enter a new body type">
                             </div>
                         </div>
                         <div class="col-md-8 text-left">
@@ -192,8 +192,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide drivetype-other">
                             <div class="form-group">
-                                <label asp-for="DriveTypeName">New Drive Type</label>
-                                <input asp-for="DriveTypeName" type="text" class="form-control search-fields" placeholder="Enter a new drive type">
+                                <label asp-for="NewDriveTypeName">New Drive Type</label>
+                                <input asp-for="NewDriveTypeName" type="text" class="form-control search-fields" placeholder="Enter a new drive type">
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -207,8 +207,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide fueltype-other">
                             <div class="form-group">
-                                <label asp-for="FuelTypeName">New Fuel Type</label>
-                                <input asp-for="FuelTypeName" type="text" class="form-control search-fields" placeholder="Enter a new fuel type">
+                                <label asp-for="NewFuelTypeName">New Fuel Type</label>
+                                <input asp-for="NewFuelTypeName" type="text" class="form-control search-fields" placeholder="Enter a new fuel type">
                             </div>
                         </div>
                     </div>
@@ -246,8 +246,8 @@
                         </div>
                         <div class="col-md-4 text-left other-hide purchasetype-other">
                             <div class="form-group">
-                                <label asp-for="PurchaseTypeName">New Purchase Type</label>
-                                <input asp-for="PurchaseTypeName" type="text" class="form-control search-fields" placeholder="Enter a new purchase type">
+                                <label asp-for="NewPurchaseTypeName">New Purchase Type</label>
+                                <input asp-for="NewPurchaseTypeName" type="text" class="form-control search-fields" placeholder="Enter a new purchase type">
                             </div>
                         </div>
                         <div class="col-md-8 text-left">
