--- a/CarHub/Views/Admin/Index.cshtml
+++ b/CarHub/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="container-fluid-inner">
             <h3 class="title add-new-link">
-                <a asp-action="ManageInventory" asp-controller="Admin"><span>Add New</span></a>
+                <a class="btn add-new-car-button" asp-action="ManageInventory" asp-controller="Admin"><span>Add New</span></a>
             </h3>
             <!-- Option bar start -->
             @if (Model.Count > 0)
@@ -23,6 +23,14 @@
                             <th>Model</th>
                             <th>Trim</th>
                             <th>Kms</th>
+                            <th>Purchase Date</th>
+                            <th>Purchase Price</th>
+                            <th>Repairs</th>
+                            <th>Repair Cost</th>
+                            <th>Lot Date</th>
+                            <th>Selling Price</th>
+                            <th>Sale Date</th>
+                            <th>Inventory Status</th>
                             <th>Transmission Type</th>
                             <th>Rego Number</th>
                             <th>Rego Expiry</th>
@@ -33,59 +41,59 @@
                             <th>No Of Cylinders</th>
                             <th>Drive Type</th>
                             <th>Fuel Type</th>
-                            <th>Purchase Date</th>
-                            <th>Purchase Price</th>
-                            <th>Repairs</th>
-                            <th>Repair Cost</th>
-                            <th>Lot Date</th>
-                            <th>Selling Price</th>
-                            <th>Sale Date</th>
-                            <th>Inventory Status</th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    <form>
-                                        <button asp-action="ManageInventory" asp-controller="Admin" asp-route-id="@item.Id">Edit</button>
-                                    </form>
-                                </td>
-                                <td>
-                                    @{
+                        <tr>
+                            <td>
+                                <form>
+                                    <button asp-action="ManageInventory" asp-controller="Admin" asp-route-id="@item.Id">Edit</button>
+                                </form>
+                            </td>
+                            <td>
+                                @{
 
-                                        var imageFileName = "http://placehold.it/475x332";
-                                        if (item.AllImages.Count > 0)
-                                        {
-                                            imageFileName = $"/uploads/img/{item.AllImages[0]}";
-                                        }
+                                    var imageFileName = "http://placehold.it/475x332";
+                                    if (item.AllImages.Count > 0)
+                                    {
+                                        imageFileName = $"/uploads/img/{item.AllImages[0]}";
                                     }
-                                    <img class="d-block w-100" src="@imageFileName" alt="car image" />
-                                </td>
-                                <td>@item.CarMakeName</td>
-                                <td>@item.CarModelName</td>
-                                <td>@item.TrimName</td>
-                                <td>@item.KmToDisplay</td>
-                                <td>@item.TransmissionTypeToDisplay</td>
-                                <td>@item.RegoNumber</td>
-                                <td>@item.RegoExpiryDate</td>
-                                <td>@item.ColorName</td>
-                                <td>@item.BodyTypeName</td>
-                                <td>@item.NoOfDoors</td>
-                                <td>@item.NoOfSeats</td>
-                                <td>@item.NoOfCylinders</td>
-                                <td>@item.DriveTypeName</td>
-                                <td>@item.FuelTypeName</td>
-                                <td>@item.PurchaseDate</td>
-                                <td>@item.PurchasePrice</td>
-                                <td>@item.RepairDescription</td>
-                                <td>@item.RepairCost</td>
-                                <td>@item.LotDate</td>
+                                }
+                                <img class="d-block w-100" src="@imageFileName" alt="car image" />
+                            </td>
+                            <td>@item.CarMakeName</td>
+                            <td>@item.CarModelName</td>
+                            <td>@item.TrimName</td>
+                            <td>@item.KmToDisplay</td>
+                            <td>@item.PurchaseDate</td>
+                            <td>@item.PurchasePrice</td>
+                            <td>@item.RepairDescription</td>
+                            <td>@item.RepairCost</td>
+                            <td>@item.LotDate</td>
+
+                            @if (item.SalePrice <= 0)
+                            {
+                                <td></td>
+                            }
+                            else
+                            {
                                 <td>@item.SalePrice</td>
-                                <td>@item.SaleDate</td>
-                                <td>@item.InventoryStatusName</td>
-                            </tr>
+                            }
+                            <td>@item.SaleDate</td>
+                            <td>@item.InventoryStatusName</td>
+                            <td>@item.TransmissionTypeToDisplay</td>
+                            <td>@item.RegoNumber</td>
+                            <td>@item.RegoExpiryDate</td>
+                            <td>@item.ColorName</td>
+                            <td>@item.BodyTypeName</td>
+                            <td>@item.NoOfDoors</td>
+                            <td>@item.NoOfSeats</td>
+                            <td>@item.NoOfCylinders</td>
+                            <td>@item.DriveTypeName</td>
+                            <td>@item.FuelTypeName</td>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -113,7 +121,8 @@
         $(document).ready(function () {
             $('#table_id').DataTable({
                 "scrollY": 500,
-                "scrollX": true
+                "scrollX": true,
+                "ordering": false
             });
             $('footer').empty();
         });
