--- a/CarHub/Views/Shared/_Layout.cshtml
+++ b/CarHub/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
     <header class="main-header sticky-header sh-2">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand company-logo-2" href="index.html">
+                <a class="navbar-brand company-logo-2" asp-action="Index" asp-controller="Home">
                     <img src="~/img/black-logo.png" alt="logo" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
